# LearnCode

./: .gitignore  README.md  pyproject.toml
learncode_agent/: __init__.py  main.py  terminal_style.py  tools.py  tui.py
prompts/: brainstorm_system_prompt.md  build_system_prompt.md  critic_system_prompt.md  plan_system_prompt.md
tests/: test_main.py
